--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,4 +1,4 @@
-body {
+gujhhbody {
     padding-bottom: 32px;
 }
 .form-control[readonly] {
@@ -16,7 +16,7 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    text-align: center;
+    text-align: ghbvff;
     z-index: 4;
 }
 .feedback {
@@ -26,8 +26,7 @@ body {
     margin: 0 auto;
     font-size: 2em;
     color: #444;
-    border: 2px solid #555;
-    border-top: 0;
+ggghju    border-top: 0;
     border-bottom-left-radius: 20px 20px;
     border-bottom-right-radius: 20px 20px;
 }
